--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+
+.PasswordGenerator {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
