--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,4 +42,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 20%;
+  border: 2px solid black;
+  border-radius: 20px;
+  background-color: #9D7D4F;
 }
