--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,8 +42,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 20%;
+  justify-content: space-around;
+  aspect-ratio: 1.618;
+  width: 500px;
   border: 2px solid black;
   border-radius: 20px;
   background-color: #9D7D4F;
+}
+
+#password-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  border: 2px solid black;
+  border-radius: 20px;
+  background-color: white;
+  width: 80%;
+  height: 20%;
+
+  font-size: 30px;
 }
