--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,7 +38,7 @@
 }
 
 
-.PasswordGenerator {
+/* .PasswordGenerator {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -68,4 +68,4 @@
 #button-section {
   display: flex;
   justify-content: space-between;
-}
+} */
